# segmentation-svm

./: .gitignore  01_learn_rwmean.py  2012.09.06.baseline_C10.sh  2012.09.06.baseline_C100.sh  README  README.md  autoseeds.py  batch_rwpca.py  config.py  constrained_optim.py  copy_cluster.py  delete_jobs.py  dice_utils.py  im.hdr  learn_svm_batch.py  learn_svm_batch.sh  make_plots.py  plot_cross.py  plot_dice.py  plot_loss.py  plot_utils.py  segmentation_batch.py  segmentation_test_script.txt  segmentation_utils.py  structsvmpy.py  submit_job.py  submit_jobs.py  svmStruct.py  svm_rw_api.py  svm_rw_functions.py  test.c  test_learn_segmentation_batch.py  test_mpi.py  test_mpi.sh  test_mpi2.py  test_segmentation.py  todo.txt
rwsegment/: boundary_utils.py  constrained_optim.py  duald.py  io_analyze.py  ioanalyze.py  ipdb.py  latent_svm.py  loss_functions.py  mpi.py  rwlogging.py  rwmean.py  rwmean_svm.py  rwsegment.py  rwsegment_pca.py  rwsegment_pca_prior.py  rwsegment_prior.py  rwsegment_prior_models.py  solver_mosek.py  solver_qp.py  (+7 more)
rwsegment/mrf/FastPD/: CMakeLists.txt  fastPD.cpp  fastPD_callback.cpp  fastPD_potts.cpp  old.cpp
rwsegment/mrf/FastPD/src/: CV_Fast_PD.h  CV_Fast_PD_costfunction.h  CV_Matlab.h  CostFunction.cpp  CostFunction.h  LinkedBlockList.cpp  PD_wrapper.cpp  common.h  graph.cpp  graph.h  maxflow.cpp
rwsegment/mrf/trw/: CMakeLists.txt  common.h  trw_binary.cpp  trw_general.cpp  trw_potts.cpp  trw_potts_wlabels.cpp
rwsegment/mrf/trw/src/: CMakeLists.txt  MRFEnergy.cpp  example.cpp  instances.inc  minimize.cpp  ordering.cpp  treeProbabilities.cpp
(+59 files in other folders)
